login-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-microservice
  labels:
    app: login
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login
  template:
    metadata:
      labels:
        app: login
    spec:
      containers:
        - name: login
          image: docker.io/library/login_microservice:latest
          imagePullPolicy: Never
          ports:
          - containerPort: 8080
