login-service.yml
apiVersion: v1
kind: Service
metadata:
  name: login-service
spec:
  selector:
    app: login-microservice
  ports:
    - appProtocol: http
      protocol: TCP
      port: 8080
      targetPort: 8080
